Added ms-db server with liquibase bean and database declaration

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ target
 !/environment/mongodb/.gitkeep
 /environment/postgresql/**
 !/environment/postgresql/.gitkeep
+!/environment/postgresql/init.sql
