--- a/environment/docker-compose.yml
+++ b/environment/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     - '5432:5432'
     volumes:
     - ./postgresql/data:/var/lib/postgresql/data
+    - ./postgresql/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
         POSTGRES_PASSWORD: "admin"
         POSTGRES_USER: "admin"
