--- a/ms-users/build.gradle
+++ b/ms-users/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.3.2.RELEASE'
-
+    compile project(":ms-db")
 }
