--- a/environment/docker-compose.yml
+++ b/environment/docker-compose.yml
@@ -12,7 +12,6 @@ services:
       POSTGRES_USER: "admin"
       POSRGRES_DB: "postal"
     restart: always
-
   mongo:
     image: mongo:4.4.0-rc10
     ports:
@@ -24,9 +23,13 @@ services:
     volumes:
       - ./mongodb/data:/data/db
       - ./mongodb/config:/data/configdb
-
-  activemq:
-    image: rmohr/activemq:latest
+  zookeeper:
+    image: wurstmeister/zookeeper
+  kafka:
+    image: wurstmeister/kafka
     ports:
-      - '8161:8161'
-      - '61616:61616'
+      - 9092:9092
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT:  "zookeeper:2181"
+    links:
+      - zookeeper
