--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "mapbox-gl": "^1.11.1",
     "vue": "^2.6.11",
+    "vue-mapbox": "^0.4.1",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
