updated README.md, deleted scheduler

--- a/ms-navigation/src/main/resources/application.yml
+++ b/ms-navigation/src/main/resources/application.yml
@@ -15,9 +15,9 @@ kafka:
     server: ${APPNAVIGATION_KAFKA_BOOTSTRAP_SERVER:localhost:9092}
   topic:
     departure:
-      compute: ${KAFKA_DEPARTURE_COMPUTE_TOPIC:departure_duration_compute}
-      result: ${KAFKA_DEPARTURE_RESULT_TOPIC:departure_duration_result}
+      compute: ${APPNAVIGATION_KAFKA_DEPARTURE_COMPUTE_TOPIC:departure_duration_compute}
+      result: ${APPNAVIGATION_KAFKA_DEPARTURE_RESULT_TOPIC:departure_duration_result}
     user-list:
-      request: ${KAFKA_USER_LIST_REQUEST_TOPIC:user-list_request}
-      result: ${KAFKA_USER_LIST_RESULT_TOPIC:user-list_result}
-  group_id: ${APPNAVIGATION_KAFKA_GROUP_ID:ms-navigaion}
+      request: ${APPNAVIGATION_KAFKA_USER_LIST_REQUEST_TOPIC:user_list_request}
+      result: ${APPNAVIGATION_KAFKA_USER_LIST_RESULT_TOPIC:user_list_result}
+  group_id: ${APPNAVIGATION_APPNAVIGATION_KAFKA_GROUP_ID:ms_navigaion}
