--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "mapbox-gl": "^1.11.1",
     "vue": "^2.6.11",
     "vue-mapbox": "^0.4.1",
+    "vuelidate": "^0.7.5",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
@@ -27,7 +28,8 @@
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-router": "^3.3.4",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.3.0",
+    "vuex": "^3.5.1"
   },
   "eslintConfig": {
     "root": true,
