--- a/ms-users/src/main/resources/application.yml
+++ b/ms-users/src/main/resources/application.yml
@@ -15,9 +15,9 @@ project:
   logging:
     enabled: ${APPUSERS_LOGGING_REQUESTS:false}
 kafka:
-  server: localhost:9092
+  server: ${APPUSERS_KAFKA_BOOTSTRAP_SERVER:localhost:9092}
   topic:
     user-list:
-      request: user_list_request
-      response: user_list_result
-  group_id: ms-navigation
+      request: ${APPUSERS_KAFKA_USER_LIST_REQUEST_TOPIC:user_list_request}
+      response: ${APPUSERS_KAFKA_USER_LIST_RESPONSE_TOPIC:user_list_result}
+  group_id: ${APPUSERS_KAFKA_GROUP_ID:ms-user}
