--- a/ms-departure/build.gradle
+++ b/ms-departure/build.gradle
@@ -15,8 +15,6 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compile("org.springframework.boot:spring-boot-starter-activemq")
-    compile("org.apache.activemq:activemq-broker")
     compile("com.fasterxml.jackson.core:jackson-databind")
     compileOnly 'org.projectlombok:lombok'
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
@@ -28,5 +26,6 @@ dependencies {
     }
     compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.1.5.Final'
     compile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
+    compile 'org.springframework.kafka:spring-kafka'
 
 }
