Added description for validation exception. Make empty list invisible

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "mapbox-gl": "^1.11.1",
+    "v-mask": "^2.2.3",
     "vue": "^2.6.11",
     "vue-mapbox": "^0.4.1",
     "vuelidate": "^0.7.5",
