--- a/ms-users/build.gradle
+++ b/ms-users/build.gradle
@@ -1,10 +1,12 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version '2.3.2.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 }
 
 group 'com.crashcourse'
 version '1.0'
+sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
@@ -14,7 +16,6 @@ dependencies {
     implementation(group: 'org.postgresql', name: 'postgresql', version: '42.2.14')
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
     implementation group: 'org.springframework', name: 'spring-jms', version: '5.2.8.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.3.2.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.3.2.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.3.2.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.3.3.RELEASE'
