--- a/environment/docker-compose.yml
+++ b/environment/docker-compose.yml
@@ -73,6 +73,7 @@ services:
       - crashcourse-ms-departure
       - crashcourse-ms-navigation
       - crashcourse-ms-users
+    restart: always
   postgres:
     image: postgres:11
     ports:
@@ -105,6 +106,7 @@ services:
     expose:
       - 9093
     environment:
+      KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT:  zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
       KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
@@ -113,3 +115,4 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     links:
       - zookeeper
+    restart: always
