--- a/ms-users/build.gradle
+++ b/ms-users/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.3.2.RELEASE'
+    compile group: 'com.google.guava', name: 'guava', version: 'r05'
     compile group: 'org.springframework.kafka', name: 'spring-kafka', version: '2.5.4.RELEASE'
     compile project(":ms-db")
 }
